--- a/src/KeePassWin/App.xaml
+++ b/src/KeePassWin/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="ms-appx:///Themes/KeePassWinStyles.xaml" />
                 <ResourceDictionary Source="Resources/KeePassItems.xaml" />
+                <ResourceDictionary Source="Resources/MasterDetailsView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </prism:PrismAutofacApplication.Resources>
