Fix up namespaces

--- a/src/KeePassWin/AppShell.xaml
+++ b/src/KeePassWin/AppShell.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="KeePassWin.AppShell"
+﻿<Page x:Class="KeePass.Win.AppShell"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:KeePassWin"
-      xmlns:views="using:KeePassWin.Views"
-      xmlns:viewModels="using:KeePassWin.ViewModels"
+      xmlns:local="using:KeePass.Win"
+      xmlns:views="using:KeePass.Win.Views"
+      xmlns:viewModels="using:KeePass.Win.ViewModels"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
