--- a/src/KeePassWin/Views/MainPage.xaml
+++ b/src/KeePassWin/Views/MainPage.xaml
@@ -1,8 +1,8 @@
-﻿<prismMvvm:SessionStateAwarePage x:Class="KeePassWin.Views.MainPage"
+﻿<prismMvvm:SessionStateAwarePage x:Class="KeePass.Win.Views.MainPage"
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                                 xmlns:local="using:KeePassWin.Views"
+                                 xmlns:local="using:KeePass.Win.Views"
                                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                                  xmlns:prismMvvm="using:Prism.Windows.Mvvm"
                                  prismMvvm:ViewModelLocator.AutoWireViewModel="True"
