--- a/src/KeePassWin/App.xaml
+++ b/src/KeePassWin/App.xaml
@@ -1,8 +1,8 @@
 ﻿<prism:PrismAutofacApplication
-    x:Class="KeePassWin.App"
+    x:Class="KeePass.Win.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KeePassWin"
+    xmlns:local="using:KeePass.Win"
     xmlns:prism="using:Prism.Autofac.Windows">
 
     <prism:PrismAutofacApplication.Resources>
