--- a/src/KeePassWin/Controls/EntryViewControl.xaml
+++ b/src/KeePassWin/Controls/EntryViewControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="KeePass.Controls.EntryViewControl"
+    x:Class="KeePass.Win.Controls.EntryViewControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
