--- a/src/KeePassWin/Resources/KeePassItems.xaml
+++ b/src/KeePassWin/Resources/KeePassItems.xaml
@@ -1,10 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:mvvm="using:KeePassWin.Mvvm"
-                    xmlns:keepassControls="using:KeePass.Controls"
-                    xmlns:models="using:KeePass.Models"
-                    xmlns:local="using:KeePassWin">
+                    xmlns:converters="using:KeePass.Win.Converters">
 
-    <keepassControls:AutoSuggestQueryParameterConverter x:Key="SearchArgsConverter" />
-    <keepassControls:NullObjectVisibilityConverter x:Key="NullObjectVisibilityConverter" />
+    <converters:AutoSuggestQueryParameterConverter x:Key="SearchArgsConverter" />
+    <converters:NullObjectVisibilityConverter x:Key="NullObjectVisibilityConverter" />
 </ResourceDictionary>
