--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -1,29 +1,26 @@
-﻿<prismMvvm:SessionStateAwarePage x:Class="KeePassWin.Views.DatabasePage"
+﻿<prismMvvm:SessionStateAwarePage x:Class="KeePass.Win.Views.DatabasePage"
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                                 xmlns:local="using:KeePassWin.Views"
-                                 xmlns:localc="using:KeePass.Controls"
-                                 xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+                                 xmlns:converters="using:KeePass.Win.Converters"
+                                 xmlns:keepasscontrols="using:KeePass.Win.Controls"
                                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                                 xmlns:mvvm="using:KeePassWin.Mvvm"
-                                 xmlns:keepassControls="using:KeePass.Controls"
+                                 xmlns:mvvm="using:KeePass.Win.Mvvm"
                                  xmlns:prismMvvm="using:Prism.Windows.Mvvm"
-                                 xmlns:models="using:KeePass"
                                  xmlns:keepass="using:KeePass"
                                  xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                                 xmlns:vm="using:KeePassWin.ViewModels"
+                                 xmlns:vm="using:KeePass.Win.ViewModels"
                                  prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                                  mc:Ignorable="d">
 
     <prismMvvm:SessionStateAwarePage.Resources>
-        <localc:UriVisibilityConverter x:Key="uriVisibilityConverter"/>
+        <converters:UriVisibilityConverter x:Key="uriVisibilityConverter"/>
 
-        <DataTemplate x:Name="KeePassEntryDetailsTemplate" x:DataType="models:IKeePassEntry">
-            <localc:EntryViewControl Entry="{x:Bind}" Margin="20,0,0,0" />
+        <DataTemplate x:Name="KeePassEntryDetailsTemplate" x:DataType="keepass:IKeePassEntry">
+            <keepasscontrols:EntryViewControl Entry="{x:Bind}" Margin="20,0,0,0" />
         </DataTemplate>
 
-        <DataTemplate x:Name="KeePassGroupTemplate" x:DataType="models:IKeePassGroup">
+        <DataTemplate x:Name="KeePassGroupTemplate" x:DataType="keepass:IKeePassGroup">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -34,7 +31,7 @@
             </Grid>
         </DataTemplate>
 
-        <DataTemplate x:Name="KeePassEntryTemplate" x:DataType="models:IKeePassEntry">
+        <DataTemplate x:Name="KeePassEntryTemplate" x:DataType="keepass:IKeePassEntry">
             <Grid HorizontalAlignment="Stretch">
                 <Grid.ContextFlyout>
                     <MenuFlyout>
@@ -56,7 +53,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <localc:ByteImage Grid.RowSpan="2" Image="{Binding Icon}" VerticalAlignment="Center" />
+                <keepasscontrols:ByteImage Grid.RowSpan="2" Image="{Binding Icon}" VerticalAlignment="Center" />
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Text="{Binding Title}" Style="{ThemeResource EntryItemTitleStyle}" TextTrimming="WordEllipsis" />
                 <TextBlock Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Text="{Binding UserName}" Style="{ThemeResource EntryItemUserNameStyle}" TextTrimming="WordEllipsis" />
                 <AppBarButton Grid.Column="2" Grid.RowSpan="2" Label="Website" Command="{Binding Path=DataContext.OpenUrlCommand, ElementName=Root}" CommandParameter="{Binding}" Visibility="{Binding Converter={StaticResource uriVisibilityConverter}}">
@@ -140,7 +137,7 @@
                 </controls:MasterDetailsView.MasterHeaderTemplate>
                 <controls:MasterDetailsView.NoSelectionContentTemplate>
                     <DataTemplate x:DataType="vm:DatabasePageViewModel">
-                        <CommandBar Grid.Row="4">
+                        <CommandBar>
                             <CommandBar.PrimaryCommands>
                                 <AppBarButton Name="group" Icon="NewFolder" Label="Add group" Command="{x:Bind Path=AddGroupCommand}" />
                                 <AppBarButton Name="entry" Icon="Add" Label="Add Entry" Command="{x:Bind Path=AddEntryCommand}" />
