--- a/src/KeePassWin/Views/PasswordDialog.xaml
+++ b/src/KeePassWin/Views/PasswordDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<ContentDialog
-    x:Class="KeePassWin.Views.PasswordDialog"
+    x:Class="KeePass.Win.Views.PasswordDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:KeePassWin"
