--- a/src/KeePassWin/Views/SettingsPage.xaml
+++ b/src/KeePassWin/Views/SettingsPage.xaml
@@ -1,17 +1,17 @@
 ﻿<prismMvvm:SessionStateAwarePage
-    x:Class="KeePassWin.Views.SettingsPage"
+    x:Class="KeePass.Win.Views.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KeePassWin.Views"
+    xmlns:local="using:KeePass.Win.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:mvvm="using:KeePassWin.Mvvm"
+    xmlns:mvvm="using:KeePass.Win.Mvvm"
     xmlns:keepassControls="using:KeePass.Controls"
     xmlns:prismMvvm="using:Prism.Windows.Mvvm"
     xmlns:models="using:KeePass.Models"
-    xmlns:vm="using:KeePassWin.ViewModels"
+    xmlns:vm="using:KeePass.Win.ViewModels"
     prismMvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
 
