Add BreadCrumbView control

--- a/src/KeePassWin/App.xaml
+++ b/src/KeePassWin/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="ms-appx:///Themes/KeePassWinStyles.xaml" />
                 <ResourceDictionary Source="Resources/KeePassItems.xaml" />
                 <ResourceDictionary Source="Resources/MasterDetailsView.xaml" />
+                <ResourceDictionary Source="Controls/BreadCrumbView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </prism:PrismAutofacApplication.Resources>
