--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -91,6 +91,7 @@
                   FooterContent="{x:Bind Model}"
                   MasterHeader="{x:Bind Model}"
                   ItemClickCommand="{x:Bind Path=Model.ItemClickCommand}"
+                  DeviceGestureService="{x:Bind Path=Model.DeviceGestureService}"
                   VerticalAlignment="Stretch" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                 <controls:MasterDetailsView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
